--- a/src/components/SubHeader.css
+++ b/src/components/SubHeader.css
@@ -1,13 +1,13 @@
 .subHeader__container {
   display: flex;
   justify-content: center;
-  gap: 0vw 9vw;
+  column-gap: 7.887vw;
 }
 
 .subHeader__container > a {
   color: #100f0f;
   text-decoration: none;
-  font-size: 3.3vw;
+  font-size: 3.077vw;
   padding: 0.8vw;
 }
 @media screen and (min-width: 768px) {
